# ezpyzy

./: .gitignore  README.md  pyproject.toml  test.tsv
docs/: table.md
ezpyz/: __init__.py  argcast.py  autosave.py  batch.py  bind.py  cache.py  captured_vars.py  check.py  data.py  databall.py  denominate.py  file.py  format.py  maker.py  option.py  overload.py  overload_typeguard.py  printer.py  protocol.py  scratch.py  settings.py  short_uuid.py  shush.py  singleton.py  store.py  store_folder.py  table.py  timer.py
ezpyzy/: __init__.py  allargs.py  alphanumeral.py  ansi.py  argcast.py  async_queue_loop.py  autocache.py  autosave.py  batch.py  bind.py  cache.py  captured_vars.py  cat.py  check.py  config.py  config_new.py  curse.py  data.py  debugging.py  denominate.py  digital_iteration.py  digiterate.py  dumb_table.py  eos.py  expydite.py  file.py  fixture_group.py  format.py  get.py  get_import_path.py  globalize.py  group.py  hash.py  import_path.py  job_queue.py  keyboard.py  maker.py  multiprocess.py  new_table.py  parse.py  (+25 more)
scratch/: _table.py  _use_table.py  colwise.py  eos_experimental.py  object_performance.py  output.py  row_attr_performance.py  rowwise.py  scratch.py  table.py  table_union_hinting.py  use_table.py
table/: _table.py  apply.py  table_cast_hinting.py  table_row_union.py  table_union_hinting.py
test/: check_table.py  config.py  table.py  test_config.py  test_file.py  test_table.py
test/foo/: bar.txt  baz.pkl
test_ezpyzy/: test_file.py  test_pyon.py  test_table.py  try_pyon.py
test_ezpyzy/table_perf/: view_and_iter_perf.py
(+2 files in other folders)
