[tool.poetry]
name = "ezpyz"
version = "0.1.0"
description = "utility functions solving common but annoying problems"
authors = ["jdfinch <jdfinch@emory.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
