[tool.poetry]
name = "ezpyzy"
version = "0.2.0"
description = "Utility functions solving common but annoying problems."
authors = ["jdfinch <jdfinch@emory.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
